--- a/Project/test-output/old/Suite/methods-alphabetical.html
+++ b/Project/test-output/old/Suite/methods-alphabetical.html
@@ -1,52 +1,80 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6e8f8e">  <td>22/07/25 07:53:30</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DashboardTestClass.Logoutbutton()[pri:5, instance:testcases.DashboardTestClass@5aa9e4eb]">Logoutbutton</td> 
+<tr bgcolor="6e8f8e">  <td>22/07/25 20:39:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DashboardTestClass.Logoutbutton()[pri:5, instance:testcases.DashboardTestClass@5aa9e4eb]">Logoutbutton</td> 
   <td>main@1146825051</td>   <td></td> </tr>
-<tr bgcolor="e47681">  <td>22/07/25 07:53:22</td>   <td>-8069</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod(org.testng.ITestResult)[pri:0, instance:testcases.LoginPageTestClass@6150c3ec]">&lt;&lt;afterMethod</td> 
+<tr bgcolor="6e8f8e">  <td>22/07/25 20:39:09</td>   <td>6496</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DashboardTestClass.addapage()[pri:7, instance:testcases.DashboardTestClass@5aa9e4eb]">addapage</td> 
+  <td>main@1146825051</td>   <td></td> </tr>
+<tr bgcolor="9d6772">  <td>22/07/25 20:38:54</td>   <td>-9182</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod(org.testng.ITestResult)[pri:0, instance:testcases.LoginPageTestClass@6150c3ec]">&lt;&lt;afterMethod</td> 
 <td>&nbsp;</td>  <td>main@1146825051</td>   <td></td> </tr>
-<tr bgcolor="e47681">  <td>22/07/25 07:53:22</td>   <td>-8069</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod(org.testng.ITestResult)[pri:0, instance:testcases.LoginPageTestClass@6150c3ec]">&lt;&lt;afterMethod</td> 
+<tr bgcolor="9d6772">  <td>22/07/25 20:38:54</td>   <td>-9182</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod(org.testng.ITestResult)[pri:0, instance:testcases.LoginPageTestClass@6150c3ec]">&lt;&lt;afterMethod</td> 
 <td>&nbsp;</td>  <td>main@1146825051</td>   <td></td> </tr>
-<tr bgcolor="e47681">  <td>22/07/25 07:53:37</td>   <td>7078</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod(org.testng.ITestResult)[pri:0, instance:testcases.DashboardTestClass@5aa9e4eb]">&lt;&lt;afterMethod</td> 
+<tr bgcolor="9d6772">  <td>22/07/25 20:38:54</td>   <td>-9182</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod(org.testng.ITestResult)[pri:0, instance:testcases.LoginPageTestClass@6150c3ec]">&lt;&lt;afterMethod</td> 
 <td>&nbsp;</td>  <td>main@1146825051</td>   <td></td> </tr>
-<tr bgcolor="e47681">  <td>22/07/25 07:53:22</td>   <td>-8069</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod(org.testng.ITestResult)[pri:0, instance:testcases.LoginPageTestClass@6150c3ec]">&lt;&lt;afterMethod</td> 
+<tr bgcolor="9d6772">  <td>22/07/25 20:39:30</td>   <td>26784</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod(org.testng.ITestResult)[pri:0, instance:testcases.DashboardTestClass@5aa9e4eb]">&lt;&lt;afterMethod</td> 
 <td>&nbsp;</td>  <td>main@1146825051</td>   <td></td> </tr>
-<tr bgcolor="e47681">  <td>22/07/25 07:53:22</td>   <td>-8069</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod(org.testng.ITestResult)[pri:0, instance:testcases.LoginPageTestClass@6150c3ec]">&lt;&lt;afterMethod</td> 
+<tr bgcolor="9d6772">  <td>22/07/25 20:39:30</td>   <td>26784</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod(org.testng.ITestResult)[pri:0, instance:testcases.DashboardTestClass@5aa9e4eb]">&lt;&lt;afterMethod</td> 
 <td>&nbsp;</td>  <td>main@1146825051</td>   <td></td> </tr>
-<tr bgcolor="e47681">  <td>22/07/25 07:53:37</td>   <td>7078</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod(org.testng.ITestResult)[pri:0, instance:testcases.DashboardTestClass@5aa9e4eb]">&lt;&lt;afterMethod</td> 
+<tr bgcolor="9d6772">  <td>22/07/25 20:39:48</td>   <td>44964</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod(org.testng.ITestResult)[pri:0, instance:testcases.DashboardAdminUsersTestClass@6989da5e]">&lt;&lt;afterMethod</td> 
 <td>&nbsp;</td>  <td>main@1146825051</td>   <td></td> </tr>
-<tr bgcolor="e47681">  <td>22/07/25 07:53:37</td>   <td>7310</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterTest()[pri:0, instance:testcases.LoginPageTestClass@6150c3ec]">&lt;&lt;afterTest</td> 
+<tr bgcolor="9d6772">  <td>22/07/25 20:39:30</td>   <td>26784</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod(org.testng.ITestResult)[pri:0, instance:testcases.DashboardTestClass@5aa9e4eb]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1146825051</td>   <td></td> </tr>
+<tr bgcolor="9d6772">  <td>22/07/25 20:38:54</td>   <td>-9182</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod(org.testng.ITestResult)[pri:0, instance:testcases.LoginPageTestClass@6150c3ec]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1146825051</td>   <td></td> </tr>
+<tr bgcolor="9d6772">  <td>22/07/25 20:39:48</td>   <td>44964</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod(org.testng.ITestResult)[pri:0, instance:testcases.DashboardAdminUsersTestClass@6989da5e]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1146825051</td>   <td></td> </tr>
+<tr bgcolor="9d6772">  <td>22/07/25 20:39:30</td>   <td>26784</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod(org.testng.ITestResult)[pri:0, instance:testcases.DashboardTestClass@5aa9e4eb]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1146825051</td>   <td></td> </tr>
+<tr bgcolor="9d6772">  <td>22/07/25 20:39:48</td>   <td>44980</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterTest()[pri:0, instance:testcases.LoginPageTestClass@6150c3ec]">&lt;&lt;afterTest</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1146825051</td>   <td></td> </tr>
-<tr bgcolor="e47681">  <td>22/07/25 07:53:22</td>   <td>-8067</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterclass()[pri:0, instance:testcases.LoginPageTestClass@6150c3ec]">&lt;&lt;afterclass</td> 
+<tr bgcolor="9d6772">  <td>22/07/25 20:38:54</td>   <td>-9181</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterclass()[pri:0, instance:testcases.LoginPageTestClass@6150c3ec]">&lt;&lt;afterclass</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1146825051</td>   <td></td> </tr>
-<tr bgcolor="e47681">  <td>22/07/25 07:53:37</td>   <td>7307</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterclass()[pri:0, instance:testcases.DashboardTestClass@5aa9e4eb]">&lt;&lt;afterclass</td> 
+<tr bgcolor="9d6772">  <td>22/07/25 20:39:48</td>   <td>44978</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterclass()[pri:0, instance:testcases.DashboardAdminUsersTestClass@6989da5e]">&lt;&lt;afterclass</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="e47681">  <td>22/07/25 07:53:21</td>   <td>-8978</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod()[pri:0, instance:testcases.LoginPageTestClass@6150c3ec]">&gt;&gt;beforeMethod</td> 
+<tr bgcolor="9d6772">  <td>22/07/25 20:39:30</td>   <td>26956</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterclass()[pri:0, instance:testcases.DashboardTestClass@5aa9e4eb]">&lt;&lt;afterclass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1146825051</td>   <td></td> </tr>
+<tr bgcolor="9d6772">  <td>22/07/25 20:39:20</td>   <td>16724</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod()[pri:0, instance:testcases.DashboardTestClass@5aa9e4eb]">&gt;&gt;beforeMethod</td> 
 <td>&nbsp;</td>  <td>main@1146825051</td>   <td></td> </tr>
-<tr bgcolor="e47681">  <td>22/07/25 07:53:33</td>   <td>3302</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod()[pri:0, instance:testcases.DashboardTestClass@5aa9e4eb]">&gt;&gt;beforeMethod</td> 
+<tr bgcolor="9d6772">  <td>22/07/25 20:39:20</td>   <td>16724</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod()[pri:0, instance:testcases.DashboardTestClass@5aa9e4eb]">&gt;&gt;beforeMethod</td> 
 <td>&nbsp;</td>  <td>main@1146825051</td>   <td></td> </tr>
-<tr bgcolor="e47681">  <td>22/07/25 07:53:21</td>   <td>-8978</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod()[pri:0, instance:testcases.LoginPageTestClass@6150c3ec]">&gt;&gt;beforeMethod</td> 
+<tr bgcolor="9d6772">  <td>22/07/25 20:39:41</td>   <td>38270</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod()[pri:0, instance:testcases.DashboardAdminUsersTestClass@6989da5e]">&gt;&gt;beforeMethod</td> 
 <td>&nbsp;</td>  <td>main@1146825051</td>   <td></td> </tr>
-<tr bgcolor="e47681">  <td>22/07/25 07:53:33</td>   <td>3302</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod()[pri:0, instance:testcases.DashboardTestClass@5aa9e4eb]">&gt;&gt;beforeMethod</td> 
+<tr bgcolor="9d6772">  <td>22/07/25 20:38:52</td>   <td>-11233</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod()[pri:0, instance:testcases.LoginPageTestClass@6150c3ec]">&gt;&gt;beforeMethod</td> 
 <td>&nbsp;</td>  <td>main@1146825051</td>   <td></td> </tr>
-<tr bgcolor="e47681">  <td>22/07/25 07:53:21</td>   <td>-8978</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod()[pri:0, instance:testcases.LoginPageTestClass@6150c3ec]">&gt;&gt;beforeMethod</td> 
+<tr bgcolor="9d6772">  <td>22/07/25 20:38:52</td>   <td>-11233</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod()[pri:0, instance:testcases.LoginPageTestClass@6150c3ec]">&gt;&gt;beforeMethod</td> 
 <td>&nbsp;</td>  <td>main@1146825051</td>   <td></td> </tr>
-<tr bgcolor="e47681">  <td>22/07/25 07:53:21</td>   <td>-8978</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod()[pri:0, instance:testcases.LoginPageTestClass@6150c3ec]">&gt;&gt;beforeMethod</td> 
+<tr bgcolor="9d6772">  <td>22/07/25 20:39:20</td>   <td>16724</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod()[pri:0, instance:testcases.DashboardTestClass@5aa9e4eb]">&gt;&gt;beforeMethod</td> 
 <td>&nbsp;</td>  <td>main@1146825051</td>   <td></td> </tr>
-<tr bgcolor="e47681">  <td>22/07/25 07:52:18</td>   <td>-72563</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeTest()[pri:0, instance:testcases.LoginPageTestClass@6150c3ec]">&gt;&gt;beforeTest</td> 
+<tr bgcolor="9d6772">  <td>22/07/25 20:38:52</td>   <td>-11233</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod()[pri:0, instance:testcases.LoginPageTestClass@6150c3ec]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1146825051</td>   <td></td> </tr>
+<tr bgcolor="9d6772">  <td>22/07/25 20:39:20</td>   <td>16724</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod()[pri:0, instance:testcases.DashboardTestClass@5aa9e4eb]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1146825051</td>   <td></td> </tr>
+<tr bgcolor="9d6772">  <td>22/07/25 20:38:52</td>   <td>-11233</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod()[pri:0, instance:testcases.LoginPageTestClass@6150c3ec]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1146825051</td>   <td></td> </tr>
+<tr bgcolor="9d6772">  <td>22/07/25 20:39:41</td>   <td>38270</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod()[pri:0, instance:testcases.DashboardAdminUsersTestClass@6989da5e]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1146825051</td>   <td></td> </tr>
+<tr bgcolor="9d6772">  <td>22/07/25 20:38:22</td>   <td>-40379</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeTest()[pri:0, instance:testcases.LoginPageTestClass@6150c3ec]">&gt;&gt;beforeTest</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1146825051</td>   <td></td> </tr>
-<tr bgcolor="e47681">  <td>22/07/25 07:53:23</td>   <td>-7485</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeclass(java.lang.String)[pri:0, instance:testcases.DashboardTestClass@5aa9e4eb]">&gt;&gt;beforeclass</td> 
+<tr bgcolor="9d6772">  <td>22/07/25 20:38:55</td>   <td>-7931</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeclass(java.lang.String)[pri:0, instance:testcases.DashboardTestClass@5aa9e4eb]">&gt;&gt;beforeclass</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1146825051</td>   <td></td> </tr>
-<tr bgcolor="e47681">  <td>22/07/25 07:52:18</td>   <td>-72499</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeclass(java.lang.String)[pri:0, instance:testcases.LoginPageTestClass@6150c3ec]">&gt;&gt;beforeclass</td> 
+<tr bgcolor="9d6772">  <td>22/07/25 20:39:31</td>   <td>28350</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeclass(java.lang.String)[pri:0, instance:testcases.DashboardAdminUsersTestClass@6989da5e]">&gt;&gt;beforeclass</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1146825051</td>   <td></td> </tr>
-<tr bgcolor="6e8f8e">  <td>22/07/25 07:53:33</td>   <td>3302</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DashboardTestClass.editaPage()[pri:6, instance:testcases.DashboardTestClass@5aa9e4eb]">editaPage</td> 
+<tr bgcolor="9d6772">  <td>22/07/25 20:38:22</td>   <td>-40318</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeclass(java.lang.String)[pri:0, instance:testcases.LoginPageTestClass@6150c3ec]">&gt;&gt;beforeclass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1146825051</td>   <td></td> </tr>
+<tr bgcolor="646283">  <td>22/07/25 20:39:38</td>   <td>35400</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DashboardAdminUsersTestClass.changeStatusAdminUser()[pri:9, instance:testcases.DashboardAdminUsersTestClass@6989da5e]">changeStatusAdminUser</td> 
   <td>main@1146825051</td>   <td></td> </tr>
-<tr bgcolor="a7c7e0">  <td>22/07/25 07:53:20</td>   <td>-9774</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTestClass.loginPageCorrectUsernameInvalidPassword()[pri:3, instance:testcases.LoginPageTestClass@6150c3ec]">loginPageCorrectUsernameInvalidPassword</td> 
+<tr bgcolor="646283">  <td>22/07/25 20:39:41</td>   <td>38270</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DashboardAdminUsersTestClass.createANewUser()[pri:10, instance:testcases.DashboardAdminUsersTestClass@6989da5e]">createANewUser</td> 
   <td>main@1146825051</td>   <td></td> </tr>
-<tr bgcolor="a7c7e0">  <td>22/07/25 07:53:21</td>   <td>-8978</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTestClass.loginPageCorrectUsernamePassword()[pri:4, instance:testcases.LoginPageTestClass@6150c3ec]">loginPageCorrectUsernamePassword</td> 
+<tr bgcolor="6e8f8e">  <td>22/07/25 20:39:20</td>   <td>16724</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DashboardTestClass.deleteAPage()[pri:8, instance:testcases.DashboardTestClass@5aa9e4eb]">deleteAPage</td> 
   <td>main@1146825051</td>   <td></td> </tr>
-<tr bgcolor="a7c7e0">  <td>22/07/25 07:53:14</td>   <td>-16015</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTestClass.loginPageInvalidUsernameCorrectPassword()[pri:2, instance:testcases.LoginPageTestClass@6150c3ec]">loginPageInvalidUsernameCorrectPassword</td> 
+<tr bgcolor="6e8f8e">  <td>22/07/25 20:39:05</td>   <td>2629</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DashboardTestClass.editaPage()[pri:6, instance:testcases.DashboardTestClass@5aa9e4eb]">editaPage</td> 
   <td>main@1146825051</td>   <td></td> </tr>
-<tr bgcolor="a7c7e0">  <td>22/07/25 07:53:14</td>   <td>-16419</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTestClass.websiteisdisplayed()[pri:1, instance:testcases.LoginPageTestClass@6150c3ec]">websiteisdisplayed</td> 
+<tr bgcolor="a7c7e0">  <td>22/07/25 20:38:51</td>   <td>-11793</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTestClass.loginPageCorrectUsernameInvalidPassword()[pri:3, instance:testcases.LoginPageTestClass@6150c3ec]">loginPageCorrectUsernameInvalidPassword</td> 
+  <td>main@1146825051</td>   <td></td> </tr>
+<tr bgcolor="a7c7e0">  <td>22/07/25 20:38:52</td>   <td>-11233</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTestClass.loginPageCorrectUsernamePassword()[pri:4, instance:testcases.LoginPageTestClass@6150c3ec]">loginPageCorrectUsernamePassword</td> 
+  <td>main@1146825051</td>   <td></td> </tr>
+<tr bgcolor="a7c7e0">  <td>22/07/25 20:38:46</td>   <td>-16970</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTestClass.loginPageInvalidUsernameCorrectPassword()[pri:2, instance:testcases.LoginPageTestClass@6150c3ec]">loginPageInvalidUsernameCorrectPassword</td> 
+  <td>main@1146825051</td>   <td></td> </tr>
+<tr bgcolor="a7c7e0">  <td>22/07/25 20:38:45</td>   <td>-17697</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTestClass.websiteisdisplayed()[pri:1, instance:testcases.LoginPageTestClass@6150c3ec]">websiteisdisplayed</td> 
   <td>main@1146825051</td>   <td></td> </tr>
 </table>
