--- a/Project/test-output/old/Suite/methods-not-run.html
+++ b/Project/test-output/old/Suite/methods-not-run.html
@@ -1,4 +1,6 @@
 <h2>Methods that were not run</h2><table>
 <tr><td>testcases.BaseClass.afterTest</td></tr>
+<tr><td>testcases.BaseClass.afterTest</td></tr>
+<tr><td>testcases.BaseClass.beforeTest</td></tr>
 <tr><td>testcases.BaseClass.beforeTest</td></tr>
 </table>
